# libcalendars

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Jenkinsfile  Makefile.am  Makefile.in  README  README.md  _formulas.tex  appveyor.yml  cl-export_8h.html  cl-export_8h.js  cl-export_8h__dep__incl.md5  cl-export_8h_source.html  cl-gregorian_8c.html  cl-gregorian_8c.js  cl-gregorian_8h.html  cl-gregorian_8h.js  cl-gregorian_8h__incl.md5  cl-gregorian_8h_source.html  cl-jewish_8c.html  cl-jewish_8c.js  cl-jewish_8c__incl.md5  cl-jewish_8h.html  cl-jewish_8h.js  cl-jewish_8h__dep__incl.md5  cl-jewish_8h__incl.md5  cl-jewish_8h_source.html  cl-julian_8c.html  cl-julian_8c__incl.md5  cl-julian_8h.html  cl-julian_8h.js  cl-julian_8h__dep__incl.md5  cl-julian_8h_source.html  cl-math_8c.html  cl-math_8c.js  (+35 more)
android/: .gitignore  compile  settings.gradle
android/calendar/: build.gradle
android/calendar/src/androidTest/java/ir/tooska/calendar/: ExampleInstrumentedTest.java
android/calendar/src/main/: AndroidManifest.xml
android/calendar/src/main/java/ir/tooska/: Calendar.java
android/calendar/src/test/java/ir/tooska/calendar/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
android/jni/: Android.mk  Application.mk  GPATH  GRTAGS  GTAGS  cl-jni.c  cl-jni.h
android/jni/calendar_test/: CMakeLists.txt  calendar_test.kdev4
android/jni/calendar_test/.kdev4/: calendar_test.kdev4
cmake/: libcalendarsConfig.cmake
debian/: changelog  control  copyright  rules  shlibs.local
doxyfiles/: .Doxyfile.kate-swp  Doxyfile  Doxyfile.bak  mainpage.md
html/: cl-gregorian_8c__incl.md5  cl-gregorian_8h__dep__incl.md5  cl-julian_8c.js  cl-julian_8h__incl.md5  cl-math_8c__incl.md5  cl-math_8h__incl.md5  cl-milankovic_8h__dep__incl.md5  cl-milankovic_8h__incl.md5  cl-solar-hijri_8c.js  files.js
html/search/: all_0.js  searchdata.js
include/libcalendars/: cl-calendars.h  cl-export.h  cl-gregorian.h  cl-jewish.h  cl-julian.h  cl-milankovic.h  cl-solar-hijri.h
lib/: CMakeLists.txt  libcalendars.pc.in
lib/include/libcalendars/: cl-islamic-civil.h
lib/src/: cl-calendars.c  cl-gregorian.c  cl-jewish.c  cl-math.c  cl-math.h  cl-milankovic.c
lib/win32/: libcalendars.rc
rpm/: libcalendars.spec
search/: all_0.js  all_3.js  all_4.js  all_5.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js
src/: Makefile.am  Makefile.in  cl-calendars.c  cl-calendars.h  cl-export.h  cl-gregorian.c  cl-gregorian.h  cl-islamic-civil.c  cl-islamic-civil.h  cl-jewish.c  cl-jewish.h  cl-julian.c  cl-julian.h  cl-math.c  cl-math.h  cl-milankovic.c  cl-milankovic.h  cl-solar-hijri.c  cl-solar-hijri.h  export.h  solar-hijri.c  solar-hijri.h
test/: Makefile.am  Makefile.in  solar-hijri-test.c  tst-common.c  tst-common.h  tst-gregorian.c  tst-islamic-civil.c  tst-jewish.c  tst-julian.c  tst-milankovic.c  tst-solar-hijri.c  tst-windows.h  win32-main.c
tests/: CMakeLists.txt  tst-common.c  tst-common.h  tst-gregorian.c  tst-islamic-civil.c  tst-jewish.c  tst-julian.c  tst-milankovic.c  tst-solar-hijri.c  tst-windows.h
win32/: libcalendars.rc  libcalendars.sln  libcalendars.vcxproj  libcalendars.vcxproj.filters
win32/libcalendars/: libcalendars.vcxproj  libcalendars.vcxproj.filters  resource.h
win32/libcalendars_test/: libcalendars_test.vcxproj  libcalendars_test.vcxproj.filters
